--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "coap"
-version = "0.12.0"
+version = "0.15.0"
 description = "A CoAP library"
 readme = "README.md"
 documentation = "https://docs.rs/coap/"
@@ -18,13 +18,13 @@ num-traits = "^0.2"
 log = "^0.4"
 regex = "^1.5"
 tokio =  {version = "^1.11", features = ["full"]}
-tokio-util = {version = "^0.6", features = ["codec","net"]}
+tokio-util = {version = "0.7", features = ["codec","net"]}
 tokio-stream = {version = "^0.1", features = ["time"]}
 futures = "^0.3"
 bytes = "^1.1"
-coap-lite = "0.9.1"
+coap-lite = "0.11.2"
 lru_time_cache = "0.11.11"
-mio = "=0.8.2"               # fix windows broken, remove it after mio updated
+mio = "0.8.5"               # fix windows broken, remove it after mio updated
 
 [dev-dependencies]
-quickcheck = "0.8.2"
+quickcheck = "1.0.3"
